CSS corrections. Changed databox to display inline-table from inline-block. It fixed all the problems. Now databoxes can stretch properly without text jumping out. It also fixed box alignment issues.

--- a/styles.css
+++ b/styles.css
@@ -133,16 +133,16 @@ ul {
 /* Data box class for displaying
  * short pieces of info */
  .dataBox {
-    display: inline-block;
-    width: 7em;
-    height: 4em;
+    display: inline-table;
+    width: 25%;
+    min-height: 4em;
 
     /* float: left; */
     
-    background-color: rgb(209, 237, 237, 0.28);
+    background-color: rgba(209, 232, 237, 0.33);
     margin: 5px 10px 5px 0; 
     border-radius: 4px;
-    border: 1px solid #304a4b1b;
+    border: 1px solid #0c33342b;
 
     text-align: center;
     font-size: 17px;
